implement register sale